<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:background="@android:color/background_light">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/robuttavatar"
            android:id="@+id/imageView"
            android:layout_weight="2.5"
            android:src="@drawable/robuttavatar" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="256dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/required_text"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:textColorLink="@android:color/holo_blue_dark"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:ems="10"
                android:windowSoftInputMode="adjustPan"
                android:id="@+id/name_edit"
                android:hint="@string/name_hint"
                android:gravity="center_horizontal"
                android:textColorLink="@android:color/holo_blue_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/uteid_edit"
                android:hint="@string/uteid_hint"
                android:gravity="center_horizontal"
                android:textColorLink="@android:color/holo_blue_dark"
                android:windowSoftInputMode="adjustPan"/>


        </LinearLayout>

    </LinearLayout>
    <Button
        android:text="@string/login_submission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:onClick="submit"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

</RelativeLayout>
